smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/trait-on-eof.smithy
// Parse error at line 4, column 1 near `deprecated`: Found a trait doesn't apply to anything
namespace com.foo

@deprecated
